src/objects/ARMS_Activity__c.object
<CustomObject>
    <fields>
        <fullName>ARMS_Activity_Date_Logged__c</fullName>
        <label>ARMS Activity Date Logged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ARMS_Activity_Status_Sub_Type__c</fullName>
        <label>ARMS Activity Status Sub Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Activity_Type__c</fullName>
        <label>ARMS Activity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Logged_By__c</fullName>
        <label>ARMS Logged By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Outstanding_Amount_Activity__c</fullName>
        <label>ARMS Outstanding Amount (Activity)</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARMS_Period_of_Debt_End_Date__c</fullName>
        <label>ARMS Period of Debt End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARMS_Period_of_Debt_Start_Date__c</fullName>
        <label>ARMS Period of Debt Start Date</label>
        <type>Date</type>
    </fields>
    <label>ARMS Activity</label>
    <nameField>
        <label>ARMS Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARMS Activites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>